<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@android:color/transparent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:title="FruitAlert"
            app:titleTextColor="#000000"
            app:titleTextAppearance="@style/Menu_Appearance"
            android:layout_height="wrap_content"
            android:elevation="5dp"

            />
        <View android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/bottom_border_orange"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button2"
        android:layout_centerInParent="true"
        android:backgroundTint="#F8B11B"
        android:text="@string/take_picture"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="21sp"
        android:textStyle="bold"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:backgroundTint="#F8B11B"
        android:text="@string/launch_gallery"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="21sp"
        android:textStyle="bold"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />
    <ImageView
        android:layout_width="370sp"
        android:layout_height="370sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView"
        android:layout_marginTop="100sp"
        android:scaleType="center"
        android:background="@drawable/round_border"
        android:contentDescription="@string/display_selected_image" />

    <ImageView
        android:layout_width="370sp"
        android:layout_height="370sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageViewCover"
        android:layout_marginTop="100sp"
        android:scaleType="center"
        android:background="@drawable/round_border"
         />
    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/imageView"
        android:visibility="invisible"
        android:layout_marginTop="10sp"
        />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="198dp"
        android:background="@drawable/seekbar_border"
        android:max="100"
        android:progress="40"
        android:progressDrawable="@drawable/seekbar_progress"
        android:splitTrack="false"
        android:thumb="@drawable/seekbar_thumb"
        android:thumbOffset="0dp"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:gravity="center_horizontal|top"
        android:textColor="#C30000"
        android:textStyle="bold"
        android:textSize="27sp"
        android:id="@+id/result"
        android:layout_below="@+id/descriptionText"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button2"
        android:layout_centerVertical="true"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#F8B11B"
        android:text="@string/live_camera"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="21sp"
        android:textStyle="bold"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

</RelativeLayout>